# hermes-model

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: _tests.yml  publish.yml  tests.yml
docs/source/: conf.py  index.md  index.rst
docs/source/user/: formats.md  getstarted.md  howto.md  index.md  validated.md
hermes_model/: __init__.py  logging.py  schemas.py  validation.py
hermes_model/tests/: test_logging.py  test_validation.py
ramsis/: __init__.py  schemas.py  validation.py
ramsis_model/: __init__.py  validation.py
