[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_model*"]

[project]
name = "hermes-model"
dynamic = ["version"]
description = "Interface and documentation on how to create an interface to the HERMES software."
readme = "README.md"
authors = [{ name = "Nicolas Schmid" }]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = ["pydantic", "seismostats", "shapely"]

requires-python = ">=3.12"

[project.optional-dependencies]
hydws = ["hydws-client"]
dev = [
    "build",
    "setuptools-scm",
    "twine",
    "pyarrow",
    "pytest",
    "isort",
    "pytest-cov",
    "tox",
    "flake8",
    "responses",
]

[project.urls]
Documentation = "https://github.com/swiss-seismological-service/hermes-model"
Repository = "https://github.com/swiss-seismological-service/hermes-model"
Issues = "https://github.com/swiss-seismological-service/hermes-model/issues"


[tool.setuptools_scm]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore::DeprecationWarning"]
