[metadata]
name = ramsis-model
author = 
    Schmid Nicolas
author_email = 
    nicolas.schmid@sed.ethz.ch
version = 0.1.0
description = 
    Interface and documentation on how to create an interface to the RAMSIS software.
long_description = file: README.md, LICENSE
license = AGPL License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    pydantic
    seismostats @ git+https://github.com/swiss-seismological-service/SeismoStats.git
    


python_requires = >= 3.10

[options.extras_require]
hydws = 
    hydws-client @ git+https://git@gitlab.seismo.ethz.ch/indu/hydws-client.git

[options.packages.find]
include=ramsis_model*

[flake8]
select = E,F,W
max_line_length = 79
ignore = E402, W503
exclude =
  .git,
  .tox,
  .eggs,
  .config,
  *.egg-info,
  __pycache__,
  .pytest_cache,
  env,
